Small QoL addition to wrap to hit/damage chat log with span that has a title explaining the roll mods.

--- a/src/templates/chat/attack-roll.html
+++ b/src/templates/chat/attack-roll.html
@@ -1,8 +1,8 @@
 <div>
   <h3>{{ weapon.name }}</h3>
-  {{{ diceTooltip.hit }}}
+  <span title="{{ diceTooltip.hitExplain }}">{{{ diceTooltip.hit }}}</span>
   <span>{{localize 'swnr.weapon.shock.damage'}}:</span>
-  {{{ diceTooltip.damage }}}
+  <span title="{{ diceTooltip.damageExplain }}">{{{ diceTooltip.damage }}}</span>
   {{#if (ne weapon.data.data.ammo.type 'none')}}
   <div class="ammo-{{ ammoRatio }}">
     {{localize 'swnr.weapon.ammo'}}: {{ weapon.data.data.ammo.value }}/{{
