Adding a reload icon to weapon in combat tab. Reloads and logs if there missing ammo

--- a/src/templates/actors/fragments/weapon.html
+++ b/src/templates/actors/fragments/weapon.html
@@ -43,6 +43,16 @@
     </div>
   </a>
   <div class="item-controls flex gap-1">
+          {{#if (ne item.data.data.ammo.type "none")}}
+
+              <a
+                class="item-control item-reload text-gray-600 hover:text-purple-800 transition-colors"
+                title="{{localize 'swnr.sheet.reload-item'}}"
+              >
+                <i class="fas fa-retweet"></i>
+              </a>
+          {{/if}}
+
     <a
       class="item-control item-edit text-gray-600 hover:text-purple-800 transition-colors"
       title="{{localize 'swnr.sheet.edit-item'}}"
