--- a/src/templates/actors/character-sheet.html
+++ b/src/templates/actors/character-sheet.html
@@ -414,6 +414,23 @@
           </div>
         </div>
         <div class="tab combat" data-group="primary" data-tab="combat">
+          <div class="grid grid-cols-3">
+            <div>
+              {{#if actor.data.data.tweak.quickSkill1}}
+              {{ actor.data.data.tweak.quickSkill1 }}
+              {{/if}}
+            </div>
+            <div>
+              {{#if actor.data.data.tweak.quickSkill2}}
+              {{ actor.data.data.tweak.quickSkill2 }}
+              {{/if}}
+            </div>
+            <div>
+              {{#if actor.data.data.tweak.quickSkill3}}
+              {{ actor.data.data.tweak.quickSkill3 }}
+              {{/if}}
+            </div>
+          </div>
           <div class="flex gap-1">
             <div class="flex-grow">
               <h4 class="text-lg underline text-center">
