--- a/src/templates/actors/npc-sheet.html
+++ b/src/templates/actors/npc-sheet.html
@@ -125,7 +125,7 @@
           name="data.armorType"
           class="border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
         >
-          {{#select data.armorType}}
+          {{#select actor.data.data.armorType}}
           <option value="primitive">
             {{localize 'swnr.armor.type.primitive'}}
           </option>
