--- a/src/templates/actors/character-sheet.html
+++ b/src/templates/actors/character-sheet.html
@@ -414,6 +414,26 @@
           </div>
         </div>
         <div class="tab combat" data-group="primary" data-tab="combat">
+          <div class="grid grid-cols-3">
+            <div>
+              {{>
+              "systems/swnr/templates/actors/fragments/quick-skill.html" quickskill=actor.data.data.tweak.quickSkill1
+              skills=itemTypes.skill
+              type=actor.data.data.type actor=actor}}
+            </div>
+            <div>
+              {{>
+              "systems/swnr/templates/actors/fragments/quick-skill.html" quickskill=actor.data.data.tweak.quickSkill2
+              skills=itemTypes.skill
+              type=actor.data.data.type actor=actor}}
+            </div>
+            <div>
+              {{>
+              "systems/swnr/templates/actors/fragments/quick-skill.html" quickskill=actor.data.data.tweak.quickSkill3
+              skills=itemTypes.skill
+              type=actor.data.data.type actor=actor}}
+            </div>
+          </div>
           <div class="flex gap-1">
             <div class="flex-grow">
               <h4 class="text-lg underline text-center">
