--- a/src/templates/chat/attack-roll.html
+++ b/src/templates/chat/attack-roll.html
@@ -3,6 +3,10 @@
   <span title="{{ diceTooltip.hitExplain }}">{{{ diceTooltip.hit }}}</span>
   <span>{{localize 'swnr.weapon.shock.damage'}}:</span>
   <span title="{{ diceTooltip.damageExplain }}">{{{ diceTooltip.damage }}}</span>
+  {{#if (ne shock_content null)}}
+   {{ shock_content }}
+   {{{ shock_roll }}}
+  {{/if}}
   {{#if (ne weapon.data.data.ammo.type 'none')}}
   <div class="ammo-{{ ammoRatio }}">
     {{localize 'swnr.weapon.ammo'}}: {{ weapon.data.data.ammo.value }}/{{
