--- a/src/templates/dialogs/roll_hp.html
+++ b/src/templates/dialogs/roll_hp.html
@@ -14,6 +14,8 @@
     <label for="classicExpert">{{localize 'swnr.dialog.hp.classic-exp'}}</label> <br>
     <input type="radio" name="hpRoll" value="classicWarrior" />
     <label for="classicWarrior">{{localize 'swnr.dialog.hp.classic-war'}}</label> <br>
-    
+    <input type="radio" name="hpRoll" value="codexMage" />
+    <label for="codexMage">{{localize 'swnr.dialog.hp.codex-mage'}}</label> <br>
+       
   </div>
 </form>
