more wip on ship stuff

--- a/src/templates/actors/ship-sheet.html
+++ b/src/templates/actors/ship-sheet.html
@@ -265,6 +265,11 @@
         <!-- weapons -->
         <div class="weapons pr-0.5 text-lg">
           <h3>{{localize 'swnr.sheet.ship.weapons'}}</h3>
+          aa
+            {{#each itemTypes.shipWeapon as |item id|}} 
+              {{item.name}} {{id}}
+            {{/each}}
+
         </div>
 
         <!-- defense -->
